--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'GT-Alpina-Standard';
+  src: url('/fonts/GT-Alpina-Standard-Light-Trial.woff2');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'GT-Alpina-Standard';
+  src: url('/fonts/GT-Alpina-Standard-Regular-Trial.woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'NHaasGroteskDSPro';
+  src: url('/fonts/NHaasGroteskDSPro-55Rg.woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'NHaasGroteskDSPro';
+  src: url('/fonts/NHaasGroteskDSPro-65Md.woff2');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'NHaasGroteskDSPro';
+  src: url('/fonts/NHaasGroteskDSPro-75Bd.woff2');
+  font-weight: 700;
+}
+
 body {
   @apply antialiased;
 }
