--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,19 @@
 body {
   @apply antialiased;
 }
+
+.info-headline {
+  @apply mb-3 font-sans text-sm font-medium tracking-normal text-[#F84B40];
+}
+
+.contact-list {
+  @apply m-0 border-b border-slate-100 p-0 dark:border-white/10;
+}
+
+.contact-label {
+  @apply flex items-center justify-between px-0 py-2 no-underline;
+}
+
+.contact-icon {
+  @apply stroke-current text-slate-300 group-hover:text-slate-900 dark:text-slate-800 dark:group-hover:text-slate-300;
+}
